# repoStar

./: .gitignore  AGENTS.md  README.md  UPDATE.md  excluded_issues.txt.example  pyproject.toml  requirements.txt  run_issue_finder.py  setup.py
issue_finder/: __init__.py  __main__.py  analyzer.py  async_client.py  cache.py  cli.py  config.py  discovery.py  display.py  filters.py  finder.py  github_api.py  github_client.py  github_queries.py  history.py  interactive.py  issue_analyzer.py  main.py  models.py  output.py  path_rules.py  profiles.py  repo_analyzer.py  scoring.py  scraper.py  text_rules.py  types.py
tests/: test_filters.py  test_finder.py  test_scoring.py
