[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-finder"
version = "0.2.0"
description = "GitHub PR Issue Analyzer CLI"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.1.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "GitPython>=3.1.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
analyzer = "issue_finder.main:main"
